# pam_aad

./: .bintray.json  .bintray.json.in  .gitignore  .indent.pro  .mailmap  .travis.yml  Dockerfile  Dockerfile.ami  Dockerfile.ami-2018.03  Dockerfile.ubuntu-18.04  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  SECURITY.md  aad.c  bootstrap.sh  buildPam.sh  configure.ac  pam_aad.c  pam_aad.spec  synchAAD.sh
contrib/openssh/: pam_aad.cast
contrib/openvpn/: client.conf  server.conf
debian/: changelog  control  copyright  libpam-aad.install  libpam-aad.lintian-overrides  libpam-aad.postinst  pam_aad.conf  rules  watch
debian/pam-configs/: aad
dev/: dlopentest.c  pam_basic.c  rest_test.c
doc/: debian.md  faq.md  gentoo.md  index.md  openvpn.md  ubuntu.md
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
examples/: example.config.ini
include/: ClientConfig.h  clientConfig.h  restclient.h
pam/pam/: Backdoor.cs  PamTypes.cs  mypam.c  pam.csproj
scripts/: docker.sh
src/: .gitignore  Makefile  aad-pam.cpp  aad-test.cpp  aad.c  clientConfig.cc  example.cpp  exceptions.h  getkeys.c  jwt.c  jwt.cpp  jwt.h  main.cc  main.cpp  pamIgnore.cpp  pam_aad.c  rest  rest.c  rest.h  rest2.c  rest_test.c  test-aad.out  tests.cpp  testtoken.txt  utils.c  utils.cpp  utils.h
test/: Dockerfile  Dockerfile.ami  Dockerfile.ami-2018.03  Dockerfile.ubuntu-18.04  Makefile  dlopentest.c  pam_aad_unittest.c
test/docker/amazon/: Dockerfile
test/docker/amazon/2018.03/: Dockerfile
test/docker/debian/: Dockerfile
test/docker/ubuntu/: Dockerfile
test/postman/: collection.json  environment.json
